@@ -40,4 +40,5 @@
 
 void addNIndexedArray(CppUnit::TextUi::TestRunner& runner);
 void addNLargeInteger(CppUnit::TextUi::TestRunner& runner);
+void addNRational(CppUnit::TextUi::TestRunner& runner);
 
