@@ -75,6 +75,7 @@ Version 4.3.2  [ under development ]
         - Added tests for the NPerm class.
         - Added tests for vertex link calculations.
         - Added tests for the orientable double cover of a triangulation.
+        - Initial work on tests for the NRational class.
 
 Version 4.3.1  [ 5 May, 2006 ]
 
